# whist

./: .gitignore  pyproject.toml
whist-api/models/: game.py
whist-api/models/cards/: __init__.py  card.py  suit.py
whist-api/models/players/: __init__.py  party.py  player.py
whist-api/models/round/: __init__.py  round.py  round_phase.py  round_type.py
whist-api/models/round/details/: __init__.py  proposing_details.py
